--- a/templates/macronutrientes.html
+++ b/templates/macronutrientes.html
@@ -50,6 +50,9 @@
         <div class="col-12 d-grid">
           <button type="submit" class="btn btn-success">Calcular</button>
         </div>
+         <div class="text-center mt-3">
+        <a href="{{ url_for('calculadoras') }}" class="btn btn-outline-dark">⬅️ Volver a Calculadoras</a>
+      </div>
       </form>
     </div>
   </div>
